# StudyingStuff

./: CMakeLists.txt  LICENSE  README.md
AhoCorasick/: CMakeLists.txt
AhoCorasick/include/: AhoAutomata.h  AhoMaskAutomata.h  AutomataNode.h  ConfigFactory.h  EnglishAhoAutomataConfig.h  IAhoAutomataConfig.h
AhoCorasick/src/: AhoAutomata.cpp  AhoMaskAutomata.cpp  AutomataNode.cpp  ConfigFactory.cpp  EnglishAhoAutomataConfig.cpp
AhoUnitTests/: CMakeLists.txt
AhoUnitTests/src/: Aho.cpp
AlphabetConfig/: CMakeLists.txt
Bruvka/: CMakeLists.txt
Bruvka/src/: main.cpp
DSU/: CMakeLists.txt
DSU/include/: DSU.h
DSU/src/: DSU.cpp  main.cpp
Flow/: CMakeLists.txt
Flow/include/: LayerNetwork.h  NetworkDelta.h  NetworkEdge.h  NetworkGraph.h  NetworkManager.h  PreFlowSystem.h  ResidualNetwork.h  TIAGraphDeltaIds.h
Flow/src/: NetworkDelta.cpp  PreFlowSystem.cpp
FlowUnitTests/: CMakeLists.txt
FlowUnitTests/src/: main.cpp
Graph/: CMakeLists.txt
Graph/include/: AdjacencyMatrixOriented.h  AdjacencyMatrixUnoriented.h  BaseGraph.h  BinaryHeap.h  Boruvka.h  CustomGenerator.h  Edge.h  EdgeListOriented.h  Graph.h  GraphDoubleValuedEdge.h  GraphFileFormat.h  GraphIntValuedEdge.h  GraphManager.h  GraphManager.hpp  GraphValuedEdge.h  GraphValuedEdge.hpp  IGraph.h  IMultiGraph.h  IOriented.h  IUnoriented.h  Kruskal.h  MinDSU.h  MinPQ.hpp  OrientedGraph.h  OrientedGraphValuedEdge.hpp  ParentChildListOriented.h  Prim.h  PriorityQueue.h  UnorientedGraph.h  UnorientedGraphValuedEdge.hpp  ValuedEdge.hpp
Graph/src/: AdjacencyMatrixOriented.cpp  AdjacencyMatrixUnoriented.cpp  BaseGraph.cpp  BinaryHeap.cpp  Boruvka.cpp  CustomGenerator.cpp  Edge.cpp  EdgeListOriented.cpp  Graph.cpp  GraphDoubleValuedEdge.cpp  GraphIntValuedEdge.cpp  GraphManager.cpp  GraphValuedEdge.cpp  Kruskal.cpp  MinDSU.cpp  MinPQ.cpp  OrientedGraph.cpp  ParentChildListOriented.cpp  Prim.cpp  PriorityQueue.cpp  UnorientedGraph.cpp
GraphUnitTests/: CMakeLists.txt  MST.ods  MST.odt
GraphUnitTests/include/: TestMST.h  TestShortestPath.hpp
GraphUnitTests/src/: TestMST.cpp  main.cpp
HamiltonCircuits/: CMakeLists.txt
HamiltonCircuits/include/: Hamilton.h
HamiltonCircuits/src/: Hamilton.cpp  main.cpp
ImplicitTreap/: CMakeLists.txt
ImplicitTreap/ImplicitTreap/: CMakeLists.txt
ImplicitTreap/ImplicitTreap/include/: ImplicitTreap.h  ImplicitTreapNode.h  ImplicitTreapTree.h
ImplicitTreap/ImplicitTreapTest/: CMakeLists.txt
ImplicitTreap/ImplicitTreapTest/src/: main.cpp
Kruskal/: CMakeLists.txt
Kruskal/src/: main.cpp
KthOrderStatistics/: CMakeLists.txt
KthOrderStatistics/include/: PSTree.h
KthOrderStatistics/src/: PSTree.cpp  main.cpp
MSTGraphGenerator/: CMakeLists.txt
MSTGraphGenerator/src/: main.cpp
MedianIR/: CMakeLists.txt
MedianIR/src/: IR.cpp  main.cpp
Monkey/: CMakeLists.txt
Monkey/include/: Monkey.h
Monkey/src/: main.cpp
PageRank/: CMakeLists.txt  Untitled 1.ods
PageRank/include/: PageRank.hpp
PageRank/src/: PageRank.cpp  main.cpp
Palindrome/: CMakeLists.txt
Palindrome/Palindrome/: CMakeLists.txt
Palindrome/Palindrome/include/: Palindrome.h  PalindromeTreap.h
Palindrome/Palindrome/src/: Palindrome.cpp  PalindromeTreap.cpp
Palindrome/PalindromeTests/: CMakeLists.txt
Palindrome/PalindromeTests/src/: main.cpp
Permutation/: CMakeLists.txt
Permutation/PermutationTests/: CMakeLists.txt
Permutation/PermutationTests/src/: main.cpp
Permutation/PermutationTreap/: CMakeLists.txt
Permutation/PermutationTreap/include/: PermutationTreap.h  PermutationTreap.hpp
Permutation/PermutationTreap/src/: PermutationTreap.cpp
PersistentData/: CMakeLists.txt
PersistentData/include/: PersistentData.hpp
PhoneNumber/: CMakeLists.txt
PhoneNumber/include/: Phone.h
PhoneNumber/src/: Phone.cpp  Phone_BACKUP_24612.cpp  Phone_LOCAL_24612.cpp  main.cpp
Prim/: CMakeLists.txt
Prim/src/: main.cpp
Strings/: CMakeLists.txt
Strings/include/: Strings.h
Strings/src/: Strings.cpp
StringsUnitTests/: CMakeLists.txt
StringsUnitTests/src/: KMP.cpp
Stuff/: CMakeLists.txt  main.cpp
SuffixAutomata/: CMakeLists.txt
SuffixAutomata/include/: SuffixAutomata.h
SuffixAutomata/src/: SuffixAutomata.cpp
SuffixAutomataUnitTests/: CMakeLists.txt
SuffixAutomataUnitTests/src/: test.cpp
UkkonenLCS/: CMakeLists.txt
UkkonenLCS/include/: EnglishAlphabetConfig.h  ExplicitState.h  IAlphabetConfig.h  SuffixTree.h
UkkonenLCS/src/: EnglishAlphabetConfig.cpp  ExplicitState.cpp  SuffixTree.cpp
UkkonenLCSUnitTests/: CMakeLists.txt
UkkonenLCSUnitTests/src/: Aho.cpp  tests.cpp
VisualGraph/: VisualGraph.cpp  VisualGraph.h  VisualGraph.pro  algorythmrun.cpp  algorythmrun.h  algorythmrun.ui  icons.qrc  igraphscene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
VisualGraph/src/: AlgorithmRunView.cpp  AlgorithmRunView.h  EdgeInfo.cpp  EdgeInfo.h  EditGraphToolBar.cpp  EditGraphToolBar.h  GraphArea.h  GraphEditArea.cpp  GraphEditArea.h  GraphEditScene.cpp  GraphEditScene.h  GraphParser.cpp  GraphParser.h  GraphScene.h  IGraphScene.h  LayeredOptions.h  LayeredResidualSwitcher.cpp  LayeredResidualSwitcher.h  TIARunScene.cpp  TIARunScene.h  Vertex.cpp  Vertex.h  VisualEdge.cpp  VisualEdge.h  VisualGraph.cpp  VisualGraph.h
