cmake_minimum_required(VERSION 2.8)
project(global)
add_definitions(-DDEBUG)
add_definitions(-std=c++11)
#add_subdirectory(Legacy)
#set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Os)
add_subdirectory(ImplicitTreap)
add_subdirectory(Palindrome)
add_subdirectory(Permutation)
add_subdirectory(KthOrderStatistics)
add_subdirectory(DSU)
add_subdirectory(PersistentData)
add_subdirectory(PhoneNumber)
add_subdirectory(Graph)
add_subdirectory(GraphUnitTests)
add_subdirectory(HamiltonCircuits)
add_subdirectory(MedianIR)
add_subdirectory(Monkey)
add_subdirectory(PageRank)
add_subdirectory(Stuff)
