cmake_minimum_required(VERSION 2.8)
project(global)
#add_definitions(-DDEBUG)
add_definitions(-std=c++14)
#add_subdirectory(ImplicitTreap)
#add_subdirectory(Palindrome)
#add_subdirectory(Permutation)
#add_subdirectory(KthOrderStatistics)
#add_subdirectory(DSU)
#add_subdirectory(PersistentData)
#add_subdirectory(PhoneNumber)
#add_subdirectory(Graph)
#add_subdirectory(GraphUnitTests)
#add_subdirectory(HamiltonCircuits)
#add_subdirectory(MedianIR)
#add_subdirectory(Monkey)
#add_subdirectory(PageRank)
#add_subdirectory(Stuff)
#add_subdirectory(Kruskal)
#add_subdirectory(Bruvka)
#add_subdirectory(Prim)
#add_subdirectory(MSTGraphGenerator)
#add_subdirectory(Flow)
#add_subdirectory(FlowUnitTests)
#add_subdirectory(Strings)
#add_subdirectory(StringsUnitTests)
#add_subdirectory(AhoCorasick)
#add_subdirectory(AhoUnitTests)
add_subdirectory(UkkonenLCS)
add_subdirectory(UkkonenLCSUnitTests)
