project(MedianIR)
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(MedianIR_Sources ${PROJECT_INCLUDE_DIR}/IR.h src/IR.cpp src/main.cpp)
include_directories(${CMAKE_SOURCE_DIR}/ImplicitTreap/ImplicitTreap/include)
include_directories(${CMAKE_SOURCE_DIR}/Permutation/PermutationTreap/include)
include_directories(${CMAKE_SOURCE_DIR}/KthOrderStatistics/include)
include_directories(${CMAKE_SOURCE_DIR}/PersistentData/include)
add_executable(MedianIR ${MedianIR_Sources})
target_link_libraries(MedianIR ImplicitTreap)
target_link_libraries(MedianIR KthOrderStatistics)
target_link_libraries(MedianIR PermutationTreap)
include_directories("${PROJECT_INCLUDE_DIR}")
