project(Monkey)
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(Monkey_Sources ${PROJECT_INCLUDE_DIR}/Monkey.h src/Monkey.cpp src/main.cpp)
include_directories(${CMAKE_SOURCE_DIR}/ImplicitTreap/ImplicitTreap/include)
include_directories(${CMAKE_SOURCE_DIR}/Permutation/PermutationTreap/include)
include_directories(${CMAKE_SOURCE_DIR}/KthOrderStatistics/include)
include_directories(${CMAKE_SOURCE_DIR}/PersistentData/include)
add_executable(Monkey ${Monkey_Sources})
target_link_libraries(Monkey ImplicitTreap)
target_link_libraries(Monkey KthOrderStatistics)
target_link_libraries(Monkey PermutationTreap)
include_directories("${PROJECT_INCLUDE_DIR}")
