project(Monkey)
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
aux_source_directory(${PROJECT_SOURCE_DIR} ${PROJECT_NAME}_SRCS)
file(GLOB_RECURSE ${PROJECT_NAME}_HEADERS ${PROJECT_INCLUDE_DIR}/*.h*)
set(${PROJECT_NAME}_SRCS ${${PROJECT_NAME}_SRCS} ${${PROJECT_NAME}_HEADERS})
include_directories(${CMAKE_SOURCE_DIR}/ImplicitTreap/ImplicitTreap/include)
include_directories(${CMAKE_SOURCE_DIR}/Permutation/PermutationTreap/include)
include_directories(${CMAKE_SOURCE_DIR}/KthOrderStatistics/include)
include_directories(${CMAKE_SOURCE_DIR}/PersistentData/include)
add_executable(Monkey ${${PROJECT_NAME}_SRCS})
target_link_libraries(Monkey ImplicitTreap)
target_link_libraries(Monkey KthOrderStatistics)
target_link_libraries(Monkey PermutationTreap)
include_directories("${PROJECT_INCLUDE_DIR}")
