cmake_minimum_required(VERSION 2.8)
project(PersistentData)
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

set(PersistentData_SRCS ${PROJECT_INCLUDE_DIR}/PersistentData.hpp)
include_directories("${PROJECT_BINARY_DIR}")
add_library(PersistentData ${PersistentData_SRCS})
SET_TARGET_PROPERTIES(PersistentData PROPERTIES LINKER_LANGUAGE CXX)
include_directories("${PROJECT_INCLUDE_DIR}")
