cmake_minimum_required(VERSION 2.8)
project(ImplicitTreapTest)
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

set(ImplicitTreapTest_SRCS ${PROJECT_SOURCE_DIR}/main.cpp)
include_directories("${PROJECT_BINARY_DIR}")
include_directories(${CMAKE_SOURCE_DIR}/ImplicitTreap/ImplicitTreap/include)
add_executable(ImplicitTreapTest ${ImplicitTreapTest_SRCS})
target_link_libraries(ImplicitTreapTest ImplicitTreap)
include_directories("${PROJECT_INCLUDE_DIR}")
