project(PermutationTests)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
aux_source_directory(${PROJECT_SOURCE_DIR} ${PROJECT_NAME}_SRCS)
include_directories(${CMAKE_SOURCE_DIR}/Permutation/PermutationTreap/include)
include_directories(${CMAKE_SOURCE_DIR}/ImplicitTreap/ImplicitTreap/include)
add_executable(PermutationTests ${${PROJECT_NAME}_SRCS})
target_link_libraries(PermutationTests PermutationTreap)
